--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -40,8 +40,8 @@
           {% endif %}
         {% endif %}
       {% endfor %}
-      <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
-      <a class="sidebar-nav-item" href="{{ author.url}}">I'm @arnicas</a>
+      <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub repo</a>
+      <a class="sidebar-nav-item" href="{{ author.url}}">@arnicas</a>
     </nav>
 
   </div>
