--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -41,7 +41,7 @@
         {% endif %}
       {% endfor %}
       <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub repo</a>
-      <a class="sidebar-nav-item" href="{{ author.url}}">@arnicas</a>
+      <a class="sidebar-nav-item" href="https://twitter.com/arnicas">@arnicas</a>
     </nav>
 
   </div>
