--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,6 +3,8 @@ layout: default
 ---
 
 <div class="page">
+  {% if page.category != "ignore" %}
   <h1 class="page-title">{{ page.title | capitalize}}</h1>
+  {% endif %}
   {{ content }}
 </div>
