layout fixes and text

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,9 +2,9 @@
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
       <h1>
-        <a href="{{ site.url }}">
+       <!--- <a href="{{ site.url }}"> -->
           {{ site.title }}
-        </a>
+        <!-- </a> -->
       </h1>
       <p class="lead">{{ site.description }}</p>
     </div>
